// Produced by Acceleo Cpp Generator 1.1.0-R7S1-20151214

import "ccsds_mal/types.proto";
import "pusGroundModel/Pus003Packet.proto";

package pusGroundModel.protobuf;

message Pus003HkPacket {
extensions 3 to 103;

  optional ccsds_mal.protobuf.UINTEGER generationMode = 1;
  optional pusGroundModel.protobuf.Pus003Packet pus003Packet = 2;
}
